<resources>
    <string name="app_name">Whose Turn</string>
    <string name="action_whose_turn">Whose turn</string>
    <string name="action_check_knee_slaps">Knee Slaps</string>
    <string name="action_settings">Settings</string>
    <string name="action_total_amount">Total amount owed</string>
    <string name="add_money_input">Enter $</string>
    <string name="button_add_1">Tomomi pays</string>
    <string name="button_add_2">Joey pays</string>
    <string name="button_add_knee_slap">Tomomi said something witty</string>
    <string name="button_use_knee_slap">Joey slapped that knee</string>
    <string name="check_activity_name">Whose Turn</string>
    <string name="knee_activity_name">Knee Slaps</string>
    <string name="sync_activity_name">Sync</string>
    <string name="sync_later">Sync later</string>
    <string name="sync_info">Tap your phone to sync!</string>
    <string name="action_sync">Sync</string>
    <string name="action_delta_sice_sync">Change since sync</string>
</resources>
